[package]
name = "encryptor"
version = "0.1.0"
authors = ["lietvamzdis"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
base64 = { version = "0.22.1", features = [] }
clipboard = "=0.5.0"

[build-dependencies]
slint-build = "1.6"
